@@ -42,6 +42,7 @@ class EditorPreferences(object):
     auto_indent = True
     line_numbers = True
     right_margin = True
+    text_wrapping = True
 
 
 class UserPreferences(object):
@@ -72,6 +73,7 @@ class UserPreferences(object):
         cp.smart_get(self.editor, 'auto_indent', smart_bool, 'editor')
         cp.smart_get(self.editor, 'line_numbers', smart_bool, 'editor')
         cp.smart_get(self.editor, 'right_margin', smart_bool, 'editor')
+        cp.smart_get(self.editor, 'text_wrapping', smart_bool, 'editor')
 
     def save(self):
         cp = SmartParser()
@@ -89,6 +91,7 @@ class UserPreferences(object):
         cp.smart_set(self.editor, 'auto_indent', 'editor')
         cp.smart_set(self.editor, 'line_numbers', 'editor')
         cp.smart_set(self.editor, 'right_margin', 'editor')
+        cp.smart_set(self.editor, 'text_wrapping', 'editor')
 
         directory = get_user_config_dir()
         if not exists(directory):
