@@ -11,6 +11,7 @@ Version 1.2.0.dev0
   * auto indent is switchable
   * showing line numbers is switchable
   * right margin is switchable
+  * text wrapping is switchable
 
 Version 1.1.0 - 03.08.2017 7:00
 
